# Email_Spam_Classifier

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
notebook/: eda.ipynb
reports/: classification_report.txt  metrics.json
src/: data_ingestion.py  explain.py  model.py  preprocessing.py
