[project]
name = "email-spam-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pickle-mixin>=1.0.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "uvicorn>=0.46.0",
]
